include/expanse.h

typedef uint32_t expanse_word_t;
typedef uint64_t expanse_word_t;
/* ---- Library identity ---------------------------------------------- */

/* Version of the libexpanse build, "MAJOR.MINOR.PATCH". */
const char *expanse_version(void);
/* ---- expanse_set_t: ordered set of expanse_word_t keys (cf. Judy1) -------- */

typedef struct expanse_set expanse_set_t;
expanse_set_t *expanse_set_new(void);
void           expanse_set_free(expanse_set_t *set);
/* Returns true if the key was newly inserted / actually removed. */
bool     expanse_set_insert(expanse_set_t *set, expanse_word_t key);
bool     expanse_set_remove(expanse_set_t *set, expanse_word_t key);
bool     expanse_set_contains(const expanse_set_t *set, expanse_word_t key);
uint64_t expanse_set_len(const expanse_set_t *set);
size_t   expanse_set_mem_used(const expanse_set_t *set);
void     expanse_set_clear(expanse_set_t *set);
/*
 * Ordered navigation. Each writes the found key through `key_out` and
 * returns true; false means no such key (and `key_out` is untouched).
 * The _at_or_ variants include the given key itself.
 */
bool expanse_set_first(const expanse_set_t *set, expanse_word_t *key_out);
bool expanse_set_last(const expanse_set_t *set, expanse_word_t *key_out);
bool expanse_set_next_at_or_after(const expanse_set_t *set, expanse_word_t key,
                                  expanse_word_t *key_out);
bool expanse_set_next_after(const expanse_set_t *set, expanse_word_t key, expanse_word_t *key_out);
bool expanse_set_prev_at_or_before(const expanse_set_t *set, expanse_word_t key,
                                   expanse_word_t *key_out);
bool expanse_set_prev_before(const expanse_set_t *set, expanse_word_t key, expanse_word_t *key_out);
/* Rank and select, both O(depth). */
uint64_t expanse_set_count_below(const expanse_set_t *set, uint64_t key);
uint64_t expanse_set_count_range(const expanse_set_t *set, uint64_t lo, uint64_t hi);
bool     expanse_set_by_count(const expanse_set_t *set, uint64_t n, uint64_t *key_out);
/*
 * Batched membership query with memory-level parallelism prefetching.
 * Checks membership for `count` keys in `keys`, writing boolean presence (true/false)
 * into `out_present`. Returns the count of found keys.
 */
size_t expanse_set_contains_batch(const expanse_set_t *set, const expanse_word_t *keys,
                                  bool *out_present, size_t count);
/* ---- expanse_map_t: ordered expanse_word_t -> expanse_word_t map (cf. JudyL) ---- */

typedef struct expanse_map expanse_map_t;
expanse_map_t *expanse_map_new(void);
void           expanse_map_free(expanse_map_t *map);
/*
 * insert: stores key -> value. If the key was present, writes the
 * replaced value through `old_out` (when non-NULL) and returns false;
 * returns true when the key is new.
 */
bool     expanse_map_insert(expanse_map_t *map, expanse_word_t key,
                            expanse_word_t value, expanse_word_t *old_out) EXPANSE_NONNULL(1);
bool     expanse_map_get(const expanse_map_t *map, expanse_word_t key, expanse_word_t *value_out);
bool     expanse_map_remove(expanse_map_t *map, expanse_word_t key, expanse_word_t *old_out);
uint64_t expanse_map_len(const expanse_map_t *map);
size_t   expanse_map_mem_used(const expanse_map_t *map);
void     expanse_map_clear(expanse_map_t *map);
/* Ordered navigation; `value_out` may be NULL if only the key matters. */
bool expanse_map_first(const expanse_map_t *map, expanse_word_t *key_out,
                       expanse_word_t *value_out);
bool expanse_map_last(const expanse_map_t *map, expanse_word_t *key_out,
                      expanse_word_t *value_out);
bool expanse_map_next_at_or_after(const expanse_map_t *map, expanse_word_t key,
                                  expanse_word_t *key_out, expanse_word_t *value_out);
bool expanse_map_next_after(const expanse_map_t *map, expanse_word_t key,
                            expanse_word_t *key_out, expanse_word_t *value_out);
bool expanse_map_prev_at_or_before(const expanse_map_t *map, expanse_word_t key,
                                   expanse_word_t *key_out, expanse_word_t *value_out);
bool expanse_map_prev_before(const expanse_map_t *map, expanse_word_t key,
                             expanse_word_t *key_out, expanse_word_t *value_out);
/*
 * Batched key lookup with memory-level parallelism prefetching.
 * Looks up `count` keys in `keys`. For each key found, writes the value into `out_values`
 * and true into `out_found` (when non-NULL). Returns the count of found keys.
 */
size_t expanse_map_get_batch(const expanse_map_t *map, const expanse_word_t *keys,
                             expanse_word_t *out_values, bool *out_found, size_t count);
/*
 * Value slots (classic JudyL convention): _slot returns a writable
 * pointer to the stored value, NULL if the key is absent; _ins_slot
 * inserts the key with value 0 if absent (an existing value is kept)
 * and always returns its slot. Valid until the next mutation.
 */
expanse_word_t *expanse_map_slot(expanse_map_t *map, expanse_word_t key);
expanse_word_t *expanse_map_ins_slot(expanse_map_t *map, expanse_word_t key);
uint64_t expanse_map_count_below(const expanse_map_t *map, uint64_t key);
uint64_t expanse_map_count_range(const expanse_map_t *map, uint64_t lo, uint64_t hi);
bool     expanse_map_by_count(const expanse_map_t *map, uint64_t n,
                              expanse_word_t *key_out, expanse_word_t *value_out);
/* ---- expanse_bytesmap_t: unordered bytes -> uint64_t (cf. JudyHS) --- */

typedef struct expanse_bytesmap expanse_bytesmap_t;
expanse_bytesmap_t *expanse_bytesmap_new(void);
void                expanse_bytesmap_free(expanse_bytesmap_t *map);
bool     expanse_bytesmap_insert(expanse_bytesmap_t *map, const void *key, size_t len,
                                 uint64_t value, uint64_t *old_out) EXPANSE_NONNULL(1);
bool     expanse_bytesmap_get(const expanse_bytesmap_t *map, const void *key, size_t len,
                              uint64_t *value_out);
bool     expanse_bytesmap_remove(expanse_bytesmap_t *map, const void *key, size_t len,
                                 uint64_t *old_out);