bindings/dotnet/src/Expanse.NET/Native/NativeMethods.cs

using System;
using System.Runtime.InteropServices;

namespace Expanse.Native;

/// <summary>
/// Native P/Invoke declarations for libexpanse modern C API.
/// </summary>
public static class NativeMethods
{
    private const string LibName = "expanse";

    static NativeMethods()
    {
        NativeLoader.Initialize();
    }

    #region Library Identity

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_version")]
    public static extern IntPtr expanse_version();

    #endregion

    #region ExpanseSet

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_set_new")]
    public static extern SafeExpanseSetHandle expanse_set_new();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_set_free")]
    public static extern void expanse_set_free(IntPtr set);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_set_insert")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool expanse_set_insert(SafeExpanseSetHandle set, ulong key);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_set_remove")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool expanse_set_remove(SafeExpanseSetHandle set, ulong key);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_set_contains")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool expanse_set_contains(SafeExpanseSetHandle set, ulong key);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_set_len")]
    public static extern ulong expanse_set_len(SafeExpanseSetHandle set);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_set_mem_used")]
    public static extern nuint expanse_set_mem_used(SafeExpanseSetHandle set);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_set_clear")]
    public static extern void expanse_set_clear(SafeExpanseSetHandle set);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_set_first")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool expanse_set_first(SafeExpanseSetHandle set, out ulong key_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_set_last")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool expanse_set_last(SafeExpanseSetHandle set, out ulong key_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_set_next_at_or_after")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool expanse_set_next_at_or_after(SafeExpanseSetHandle set, ulong key, out ulong key_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_set_next_after")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool expanse_set_next_after(SafeExpanseSetHandle set, ulong key, out ulong key_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_set_prev_at_or_before")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool expanse_set_prev_at_or_before(SafeExpanseSetHandle set, ulong key, out ulong key_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_set_prev_before")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool expanse_set_prev_before(SafeExpanseSetHandle set, ulong key, out ulong key_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_set_count_below")]
    public static extern ulong expanse_set_count_below(SafeExpanseSetHandle set, ulong key);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_set_count_range")]
    public static extern ulong expanse_set_count_range(SafeExpanseSetHandle set, ulong lo, ulong hi);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_set_by_count")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool expanse_set_by_count(SafeExpanseSetHandle set, ulong n, out ulong key_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_set_contains_batch")]
    public static extern nuint expanse_set_contains_batch(SafeExpanseSetHandle set, [In] ulong[] keys, [Out] bool[] out_present, nuint count);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_set_contains_batch")]
    public static extern unsafe nuint expanse_set_contains_batch(SafeExpanseSetHandle set, ulong* keys, bool* out_present, nuint count);

    #endregion

    #region ExpanseMap

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_map_new")]
    public static extern SafeExpanseMapHandle expanse_map_new();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_map_free")]
    public static extern void expanse_map_free(IntPtr map);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_map_insert")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool expanse_map_insert(SafeExpanseMapHandle map, ulong key, ulong value, out ulong old_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_map_insert")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool expanse_map_insert(SafeExpanseMapHandle map, ulong key, ulong value, IntPtr old_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_map_get")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool expanse_map_get(SafeExpanseMapHandle map, ulong key, out ulong value_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_map_get_batch")]
    public static extern nuint expanse_map_get_batch(SafeExpanseMapHandle map, [In] ulong[] keys, [Out] ulong[] out_values, [Out] bool[]? out_found, nuint count);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_map_get_batch")]
    public static extern unsafe nuint expanse_map_get_batch(SafeExpanseMapHandle map, ulong* keys, ulong* out_values, bool* out_found, nuint count);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_map_remove")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool expanse_map_remove(SafeExpanseMapHandle map, ulong key, out ulong old_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_map_remove")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool expanse_map_remove(SafeExpanseMapHandle map, ulong key, IntPtr old_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_map_len")]
    public static extern ulong expanse_map_len(SafeExpanseMapHandle map);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_map_mem_used")]
    public static extern nuint expanse_map_mem_used(SafeExpanseMapHandle map);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_map_clear")]
    public static extern void expanse_map_clear(SafeExpanseMapHandle map);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_map_slot")]
    public static extern unsafe ulong* expanse_map_slot(SafeExpanseMapHandle map, ulong key);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_map_ins_slot")]
    public static extern unsafe ulong* expanse_map_ins_slot(SafeExpanseMapHandle map, ulong key);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_map_first")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool expanse_map_first(SafeExpanseMapHandle map, out ulong key_out, out ulong value_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_map_last")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool expanse_map_last(SafeExpanseMapHandle map, out ulong key_out, out ulong value_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_map_next_at_or_after")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool expanse_map_next_at_or_after(SafeExpanseMapHandle map, ulong key, out ulong key_out, out ulong value_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_map_next_after")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool expanse_map_next_after(SafeExpanseMapHandle map, ulong key, out ulong key_out, out ulong value_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_map_prev_at_or_before")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool expanse_map_prev_at_or_before(SafeExpanseMapHandle map, ulong key, out ulong key_out, out ulong value_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_map_prev_before")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool expanse_map_prev_before(SafeExpanseMapHandle map, ulong key, out ulong key_out, out ulong value_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_map_count_below")]
    public static extern ulong expanse_map_count_below(SafeExpanseMapHandle map, ulong key);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_map_count_range")]
    public static extern ulong expanse_map_count_range(SafeExpanseMapHandle map, ulong lo, ulong hi);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_map_by_count")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool expanse_map_by_count(SafeExpanseMapHandle map, ulong n, out ulong key_out, out ulong value_out);

    #endregion

    #region ExpanseBytesMap

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_bytesmap_new")]
    public static extern SafeExpanseBytesMapHandle expanse_bytesmap_new();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_bytesmap_free")]
    public static extern void expanse_bytesmap_free(IntPtr map);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_bytesmap_insert")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern unsafe bool expanse_bytesmap_insert(SafeExpanseBytesMapHandle map, byte* key, nuint len, ulong value, out ulong old_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_bytesmap_insert")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern unsafe bool expanse_bytesmap_insert(SafeExpanseBytesMapHandle map, byte* key, nuint len, ulong value, IntPtr old_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_bytesmap_get")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern unsafe bool expanse_bytesmap_get(SafeExpanseBytesMapHandle map, byte* key, nuint len, out ulong value_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_bytesmap_remove")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern unsafe bool expanse_bytesmap_remove(SafeExpanseBytesMapHandle map, byte* key, nuint len, out ulong old_out);
